--- a/JavaScript/javascriptforms.html
+++ b/JavaScript/javascriptforms.html
@@ -9,9 +9,9 @@
     <body>
         <form name="myform">
         <label>FirstName</label>
-        <input type="text" name="fname"><br><br>
+        <input type="text" name="fname"  id = "fname" onchange="myfunction(this.id)"><br><br>
         <label>LastName</label>
-        <input type="text" name="lname"><br><br>
+        <input type="text" name="lname" id="lname" onchange="myfunction(this.id)"><br><br>
        <button type="button" onclick="validateform()">Submit</button>
         </form>
         <p id="demo"></p>
@@ -25,6 +25,11 @@
               if(lname == ""){
                   alert("LastName is not filled");
               }
+            }
+
+            function myfunction(id){
+                var x = document.getElementById(id);
+                x.value= x.value.toUpperCase();
             }
         </script> 
     </body>
