--- a/FlexBox.html
+++ b/FlexBox.html
@@ -59,7 +59,10 @@
 			</div>
 		</div>
 	</div>
-	<footer>Thank You Visit Again</footer>
+	<footer>
+		Thank You Visit Again
+		<p >&copy; Neosoft Tecknologies Ltd.</p>
+	</footer>
 
 </body>
 
