--- a/Form.html
+++ b/Form.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Registration Form</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="validate.js" defer></script>
 </head>
+
 <body>
-	<h2 style="text-align: center">Registration Form</h2>
-	<form action="Tables.html" method="post" target="_blank" autocomplete="off">
-		<fieldset>
-			<legend>Personalia:</legend>
-			<input type="file" name="photo" value="Choose Photo" ><br><br>
-			<label for="fname">First Name</label>
-			<input type="text" name="FirstName" id="fname" required><br><br>
-			<label for="lname">Last Name</label>
-			<input type="text" name="LastName" id="lname" required><br><br>
-			<label for="pwd">Password</label>
-			<input type="Password" name="password" id="pwd" required><br><br>
-			<label for="email">Email</label>
-			<input type="email" name="email" id="email" required><br><br>
-			<input type="radio" name="gender" value="male" id="male">
-			<label for="male">Male</label>
-			<input type="radio" name="gender"value="female" id="female">
-			<label for="female">Female</label><br><br>
-	</fieldset>
-	<fieldset>
-		<legend>other</legend>
-		<input type="checkbox" name="course" value="Science" id= "science">
-		<label for="science">Science</label><br><br>
-		<input type="checkbox" name="course" value="Commerce"id="commerce">
-		<label for="commerce">Commerce</label><br><br>
-		<input type="checkbox" name="course" value="Arts" id="arts">
-		<label for="arts">Arts</label><br><br>
-		<label for="subject">Subjects</label>
-		<select id="subject" name="subject" >
-			<option value="science">Science</option>
-			<option value="maths">Maths</option>
-			<option value="english">English</option>
-			<option value="hindi">Hindi</option>
-			<option value="marathi">Marathi</option>
-		</select><br><br>
-		<label for="favcolor">Select your favourite Colour</label>
-		<input type="color" name="favcolor" id="favcolor"><br><br>
-		<label for="birthdate">Select Birth Date</label>
-		<input type="date" name="birthdate" id="birthdate">
-	</fieldset><br><br>
-		<textarea name="message" rows="5" cols="20" placeholder="Any Suggestion"></textarea><br><br>
-		<button type="button" onclick="alert('Hello')">Click Me</button>
-		<button type="reset" value="Reset">Reset</button> 
-		<button type="submit" value="submit"> Submit</button> 
-	</form>
+	<div class="container">
+		<h2 class="heading">Registration Form</h2>
+		<form class="register_form"  method="post" autocomplete="off" name="register_form"
+				onsubmit="return validated()">
+			<input type="file" accept="png,jpg" name="photo" value="Choose Photo"><br><br>
+			<div class="info">
+
+				<label for="fname">First Name</label>
+				<input type="text" name="FirstName" id="fname">
+				<div id="fname_alpha">FirstName should be in alphabet</div>
+				<div class="error" id="fname_error">Please fill First Name </div><br><br>
+
+				<label for="lname">Last Name</label>
+				<input type="text" name="LastName" id="lname">
+				<div id="lname_alpha">LastName should be in alphabet</div>
+				<div class="error" id="lname_error">Please fill Last Name </div><br><br>
+
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email">
+				<div class="error" id="email_error">Please fill Email  </div><br><br>
+
+				<label for="pwd">Password</label>
+				<input type="Password" name="password" id="pwd">
+				<div class="error" id="pwd_error">Please fill Password </div><br><br>
+				
+			</div>
+			<div class="radio">
+				<input type="radio" name="gender" value="male" id="male">
+				<label for="male">Male</label>
+				<input type="radio" name="gender" value="female" id="female">
+				<label for="female">Female</label><br><br>
+			</div>
+			<div class="other">
+			<input type="checkbox" name="course" value="Science" id="science">
+			<label for="science">Science</label><br><br>
+			<input type="checkbox" name="course" value="Commerce" id="commerce">
+			<label for="commerce">Commerce</label><br><br>
+			<input type="checkbox" name="course" value="Arts" id="arts">
+			<label for="arts">Arts</label><br><br>
+
+			<label for="favcolor">Select your favourite Colour</label>
+			<input type="color" name="favcolor" id="favcolor"><br><br>
+
+			<label for="birthdate">Select Birth Date</label>
+			<input type="date" name="birthdate" id="birthdate">
+			<br><br>
+			<textarea name="message" rows="5" cols="20" placeholder="Any Suggestion"></textarea><br><br>
+			</div>
+			<button type="reset" value="Reset">Reset</button>
+			<button type="submit" value="submit"> Submit</button>
+		</form>
+	</div>
 </body>
+
 </html>
