--- a/JavaScript/Request.html
+++ b/JavaScript/Request.html
@@ -18,6 +18,8 @@
         <button id="get-Btn">Get </button>
         <button id="post-Btn">Post </button>
     </div>
+
+    <p id="demo"></p>
 </body>
 
 </html>
