--- a/JavaScript/javascriptforms.html
+++ b/JavaScript/javascriptforms.html
@@ -9,7 +9,7 @@
     <body>
         <form name="myform">
         <label>FirstName</label>
-        <input type="text" name="fname"  id = "fname" onchange="myfunction(this.id)"><br><br>
+        <input type="text" name="fname"  id = "firstname" onchange="myfunction(this.id)"><br><br>
         <label>LastName</label>
         <input type="text" name="lname" id="lname" onchange="myfunction(this.id)"><br><br>
        <button type="button" onclick="validateform()">Submit</button>
