--- a/BootstrapGrid.html
+++ b/BootstrapGrid.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-8 box1">Box1</div>
             <div class="col-sm-4 box2">Box2</div>
