--- a/Form.html
+++ b/Form.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<h2 class="heading">Registration Form</h2>
-		<form class="register_form"  method="post" autocomplete="off" name="register_form"
+		<form class="register_form"  method="post" autocomplete="off" name="register_form" action="Tables.html"
 				onsubmit="return validated()">
 			<input type="file" accept="png,jpg" name="photo" value="Choose Photo"><br><br>
 			<div class="info">
