--- a/JavaScript/jQuery/jQueryExample.html
+++ b/JavaScript/jQuery/jQueryExample.html
@@ -31,7 +31,9 @@ $(document).ready(function() {
   <script>
   $(document).ready(function() {
     var myElement = $("#02");
-    myElement.html("<p>Hello World!</p>");
+   // myElement.html("<p>Hello World!</p>");
+   myElement.css("font-size","35px");
+   myElement.hide();
   });
   </script>
   
